# adk-rust

./: .codeqlignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_FROM_MIKE_FORK.md  Makefile  README.md  devenv.nix  package-lock.json
.cargo/: config.toml
.github/: codeql-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mistralrs-tests.yml  nightly.yml  sync-docs.yml
.vite/vitest/: results.json
adk-3d-ui/: README.md
adk-3d-ui/tests/: phase4_approval_contract.rs  phase6_stream_contract.rs
adk-agent/: Cargo.toml  README.md
adk-agent/examples/: agent_control_demo.rs
adk-agent/src/: compaction.rs  lib.rs  llm_agent.rs  tool_call_markup.rs
adk-agent/tests/: callback_integration_test.rs  compaction_tests.rs  custom_agent_tests.rs  integration_test.rs  llm_agent_tests.rs  mcp_integration_test.rs  multi_agent_test.rs  streaming_test.rs  tool_callback_tests.rs  workflow_tests.rs
adk-artifact/: Cargo.toml  README.md
adk-auth/: Cargo.toml  README.md
adk-auth/src/: middleware.rs
adk-browser/: Cargo.toml  README.md
adk-cli/: Cargo.toml  README.md
adk-cli/src/: cli.rs  console.rs  launcher.rs  main.rs  serve.rs  skills.rs
adk-core/: Cargo.toml  README.md
adk-core/src/: context.rs  error.rs  event.rs  instruction_template.rs  lib.rs  types.rs
adk-doc-audit/: CONFIGURATION.md  Cargo.toml  README.md  WORKFLOW_INTEGRATION.md  adk-doc-audit.toml  audit-report.json
adk-doc-audit/examples/: output_formats_demo.rs
adk-doc-audit/src/: analyzer.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  orchestrator.rs  parser.rs  reporter.rs  suggestion.rs  validator.rs  version.rs
adk-doc-audit/tests/: validator_integration_tests.rs
adk-eval/: Cargo.toml
adk-eval/src/: criteria.rs
adk-gemini/: Cargo.toml  README.md
adk-gemini/examples/: batch_delete.rs  batch_embedding.rs  blob.rs  curl_equivalent.rs  curl_google_search.rs  embedding.rs  gemini_pro_example.rs  http_client_builder.rs  image_editing.rs  image_generation.rs  mp4_describe.rs  multi_speaker_tts.rs  simple_image_generation.rs  simple_speech_generation.rs  test_api.rs  text_thought_signature_example.rs  thought_signature_example.rs
adk-gemini/src/: client.rs  lib.rs  models.rs  tests.rs
adk-graph/: Cargo.toml  README.md
adk-guardrail/: README.md
adk-memory/: Cargo.toml  README.md
adk-mistralrs/: Cargo.toml
adk-mistralrs/src/: adapter.rs  client.rs  vision.rs
adk-model/: Cargo.toml  README.md
adk-model/src/: lib.rs
adk-plugin/: README.md
adk-plugin/src/: plugin.rs
adk-realtime/: Cargo.toml  README.md  ROADMAP.md
adk-realtime/src/: agent.rs  audio.rs  config.rs  error.rs  events.rs  lib.rs  model.rs  runner.rs  session.rs
adk-realtime/src/gemini/: mod.rs  model.rs  session.rs
adk-realtime/src/openai/: mod.rs  model.rs  session.rs  webrtc.rs
adk-realtime/tests/: audio_tests.rs  config_tests.rs  events_tests.rs
adk-runner/: Cargo.toml  README.md
adk-runner/src/: context.rs  runner.rs
adk-runner/tests/: compaction_e2e_test.rs  compaction_tests.rs  context_tests.rs  runner_tests.rs
adk-rust/: Cargo.toml  README.md
adk-rust/examples/: test_unified.rs
adk-rust/src/: lib.rs
adk-server/: Cargo.toml  README.md
adk-server/src/: config.rs
adk-server/tests/: server_tests.rs
adk-session/: Cargo.toml  README.md
adk-session/examples/: database_example.rs  verify_database.rs
adk-session/src/: database.rs  lib.rs  vertex.rs
adk-session/tests/: session_contract_inmemory.rs  session_contract_vertex.rs  session_contract_vertex_live.rs
adk-skill/: Cargo.toml  README.md
adk-skill/src/: discovery.rs  error.rs  index.rs  injector.rs  lib.rs  model.rs  parser.rs  select.rs
adk-spatial-os/src/: server.rs
adk-studio/: Cargo.toml  README.md
adk-telemetry/: Cargo.toml  README.md
adk-tool/: Cargo.toml  README.md
adk-ui/: Cargo.toml  README.md
docs/official_docs_examples/security/memory_test/: Cargo.toml
docs/official_docs_examples/security/memory_test/src/: basic.rs
examples/: Cargo.toml  README.md
examples/anthropic_basic/: main.rs
examples/anthropic_tools/: main.rs
examples/debug_openai_error/: main.rs
examples/deepseek_basic/: main.rs
examples/deepseek_caching/: main.rs
examples/deepseek_reasoner/: main.rs
examples/deepseek_thinking_tools/: main.rs
examples/doc_audit/: Cargo.toml  README.md
examples/doc_audit/src/: main.rs
examples/docs_translator/: main.rs
examples/mcp/: README.md  main.rs
examples/mcp_http/: main.rs
examples/openai_a2a/: main.rs
examples/openai_agent_tool/: main.rs
examples/openai_artifacts/: main.rs
examples/openai_basic/: main.rs
examples/openai_mcp/: main.rs
examples/openai_parallel/: main.rs
examples/openai_research_paper/: main.rs
examples/openai_sequential_code/: main.rs
examples/openai_server/: main.rs
examples/openai_structured/: main.rs
examples/openai_template/: main.rs
examples/openai_tools/: main.rs
examples/openai_web/: main.rs
examples/openai_workflow/: main.rs
examples/ralph/: Cargo.toml
examples/ralph/src/agents/: worker_agent.rs
examples/realtime_basic/: main.rs
examples/realtime_handoff/: main.rs
examples/realtime_tools/: main.rs
examples/realtime_vad/: main.rs
examples/roadmap_gemini_sdk/: main.rs
examples/roadmap_retry_matrix/: main.rs
examples/roadmap_vertex_auth/: main.rs
examples/skills_conventions_index/: main.rs
examples/skills_llm_minimal/: main.rs
examples/skills_workflow_minimal/: main.rs
examples/structured_output/: main.rs
examples/template/: main.rs
examples/test_llm_direct/: main.rs
examples/translator/: main.rs
examples/ui_protocol_profiles/: main.rs
examples/ui_react_client/src/: App.tsx
examples/ui_react_client/src/adk-ui-renderer/: Renderer.tsx
examples/ui_server/: main.rs
examples/ui_working/appointment/: main.rs
examples/ui_working/events/: main.rs
examples/ui_working/facilities/: main.rs
examples/ui_working/inventory/: main.rs
examples/ui_working/support/: main.rs
scripts/: setup-dev.sh
(+290 files in other folders)
