[package]
name = "adk-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "quickstart"
path = "quickstart/main.rs"

[[example]]
name = "server"
path = "server/main.rs"

[[example]]
name = "function_tool"
path = "function_tool/main.rs"

[[example]]
name = "multiple_tools"
path = "multiple_tools/main.rs"

[[example]]
name = "sequential"
path = "sequential/main.rs"

[[example]]
name = "parallel"
path = "parallel/main.rs"

[[example]]
name = "loop_workflow"
path = "loop_workflow/main.rs"

[[example]]
name = "load_artifacts"
path = "load_artifacts/main.rs"

[[example]]
name = "mcp"
path = "mcp/main.rs"

[[example]]
name = "a2a"
path = "a2a/main.rs"

[[example]]
name = "web"
path = "web/main.rs"

[[example]]
name = "sequential_code"
path = "sequential_code/main.rs"

[[example]]
name = "research_paper"
path = "research_paper/main.rs"

[[example]]
name = "agent_tool"
path = "agent_tool/main.rs"

[[example]]
name = "template"
path = "template/main.rs"

[[example]]
name = "structured_output"
path = "structured_output/main.rs"

[[example]]
name = "openai_basic"
path = "openai_basic/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_tools"
path = "openai_tools/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_workflow"
path = "openai_workflow/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_template"
path = "openai_template/main.rs"
required-features = ["openai"]

[[example]]
name = "test_llm_direct"
path = "test_llm_direct/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_parallel"
path = "openai_parallel/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_loop"
path = "openai_loop/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_agent_tool"
path = "openai_agent_tool/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_structured"
path = "openai_structured/main.rs"
required-features = ["openai"]

[[example]]
name = "debug_openai_error"
path = "debug_openai_error/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_artifacts"
path = "openai_artifacts/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_mcp"
path = "openai_mcp/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_a2a"
path = "openai_a2a/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_server"
path = "openai_server/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_web"
path = "openai_web/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_sequential_code"
path = "openai_sequential_code/main.rs"
required-features = ["openai"]

[[example]]
name = "openai_research_paper"
path = "openai_research_paper/main.rs"
required-features = ["openai"]

[[example]]
name = "anthropic_basic"
path = "anthropic_basic/main.rs"
required-features = ["anthropic"]

[[example]]
name = "anthropic_tools"
path = "anthropic_tools/main.rs"
required-features = ["anthropic"]

[features]
default = []
openai = ["adk-model/openai"]
anthropic = ["adk-model/anthropic"]

[dependencies]
adk-core = { path = "../adk-core" }
adk-agent = { path = "../adk-agent" }
adk-model = { path = "../adk-model" }
adk-tool = { path = "../adk-tool" }
adk-cli = { path = "../adk-cli" }
adk-artifact = { path = "../adk-artifact" }
adk-runner = { path = "../adk-runner" }
adk-session = { path = "../adk-session" }
adk-server = { path = "../adk-server" }
adk-memory = { path = "../adk-memory" }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
chrono = "0.4"
tracing-subscriber = "0.3"
axum = "0.7"
async-trait = "0.1"
dotenv = "0.15"
