[package]
name = "memory_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "memory_test_basic"
path = "src/basic.rs"

[dependencies]
adk-memory = { path = "../../../../adk-memory" }
adk-core = { path = "../../../../adk-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
